--- a/less/variables.less
+++ b/less/variables.less
@@ -26,6 +26,7 @@
 @blueDark:              #0064cd;
 @green:                 #46a546;
 @red:                   #ef3239;
+@darkRed:				#ed1c24;
 @yellow:                #ffc40d;
 @orange:                #f89406;
 @pink:                  #c3325f;
@@ -49,14 +50,14 @@
 @sansFontFamily:        Verdana, Geneva, sans-serif;
 @serifFontFamily:       Georgia, "Times New Roman", Times, serif;
 @monoFontFamily:        Monaco, Menlo, Consolas, "Courier New", monospace;
-@robotoFontFamily:		'Roboto', Verdana, sans-serif;
+@cabinFontFamily:		'Cabin', sans-serif;
 
 @baseFontSize:          14px;
 @baseFontFamily:        @sansFontFamily;
 @baseLineHeight:        20px;
 @altFontFamily:         @serifFontFamily;
 
-@headingsFontFamily:    @robotoFontFamily; // empty to use BS default, @baseFontFamily
+@headingsFontFamily:    @cabinFontFamily; // empty to use BS default, @baseFontFamily
 @headingsFontWeight:    300;    // instead of browser default, bold
 @headingsColor:         @red; // empty to use BS default, @textColor
 
