--- a/less/responsive_adjust.less
+++ b/less/responsive_adjust.less
@@ -1,40 +1,27 @@
 // Portrait tablet to landscape and desktop
 @media (max-width: 1199px) {
-     .container {
-          width: auto;
-          padding: 0 20px;
-     }
      body {
           padding: 0;
-          margin: 0;
-          // background: pink !important;
      }
 }
 
 
 // Tablets & small desktops only
 @media (min-width: 768px) and (max-width: 979px) {
-     .container {
-          width: auto;
-          padding: 0 10px;
-     }
-     body {
-          padding: 0;
-          margin: 0;
-          // background: green !important;
-     }
- }
+
+}
 
 
 // Phones only
 @media (max-width: 767px) {
-     .container {
-          width: auto;
-          padding: 0 5px;
-     }
-     body {
-          padding: 0;
-          margin: 0;
-          // background: yellow !important;
+
+}
+
+
+// small only
+@media (max-width: 655px) {
+     #boojer-home-circle {
+          position: static;
+          margin: 40px auto;
      }
 }
