--- a/less/responsive_adjust.less
+++ b/less/responsive_adjust.less
@@ -21,7 +21,7 @@
 // small only
 @media (max-width: 655px) {
      #boojer-home-circle {
-          position: static;
-          margin: 40px auto;
+          margin: 40px;
+          left: 0;
      }
 }
