--- a/less/style.less
+++ b/less/style.less
@@ -1,5 +1,6 @@
 @import "twitter-bootstrap/bootstrap.less";
 @import "twitter-bootstrap/responsive.less";
+@import "fancybox.less";
 @import "utilities.less";
 @import "variables.less";
 @import "helpers.less";
