--- a/less/variables.less
+++ b/less/variables.less
@@ -11,10 +11,10 @@
 // -------------------------
 @black:                 #000;
 @grayDarker:            #191919;
-@grayMedDark:			#555;
-@grayDark:              #333;
+@grayMedDark:			#3c3c3c;
+@grayDark:              #303030;
 @grayMedium:			#CCC;
-@gray:                  #666;
+@gray:                  #6a6a6a;
 @grayLight:             #999;
 @grayLighter:           #eee;
 @white:                 #fff;
