--- a/less/helpers.less
+++ b/less/helpers.less
@@ -9,5 +9,8 @@
 .large-heading {
 	font-size: 70px;
 	line-height: normal;
-	margin: 70px 0 40px 0;
+	margin: 70px 0 20px 0;
+}
+.relative {
+	position: relative;
 }
