--- a/less/site.less
+++ b/less/site.less
@@ -1,5 +1,5 @@
 body {
-     background: #303030;
+     background: @grayDark;
 }
 .main-container {
      background: url(/img/gray-triangle.png) 0 0 no-repeat @white;
@@ -44,7 +44,7 @@ body {
      background: url(/img/boojer-circle.png) no-repeat 0 0 transparent;
      position: absolute;
      display: block;
-     top: 155px;
+     top: 65px;
      right: 155px;
      width: 372px;
      height: 372px;
@@ -64,7 +64,136 @@ body {
      }
 }
 
+.content-heading {
+     margin-bottom: 50px;
+     p {
+          font-size: 16px;
+          line-height: 22px;
+          color: @gray;
+     }
+}
+
+#home-gallery {
+     width: 100%;
+} 
+.imageContainer {
+     margin: 1px;
+     -webkit-user-select: none;
+     position: relative; 
+     float: left;   
+     padding: 0;
+     img {
+          max-width: none; 
+     }
+     a {
+          display: block;
+     }
+}
+
 #boojer-gallery {
+     .thumbnails {
+          margin-left: -30px;
+          li {
+               margin: 0 0 30px 30px;              
+               background: @grayMedium;
+               img {
+                    margin: 1px;
+               }
+               > div {
+                    padding: 20px;
+               }
+               h3 {
+                    color: @darkRed;
+                    font-size: 18px;
+                    line-height: normal;
+                    margin: 0;
+               }
+               p {
+                    font-size: 12px;
+                    margin: 0;
+                    color: @black;
+                    font-style: italic;
+                    line-height: normal;
+               }
+          }
+     }
+}
+
+
+
+#gallery-viewer {
+     .gallery-viewer-left {
+          display: table;
+          position: relative;
+     }
+     .gallery-viewer-gallery-info {
+
+     }
+     .gallery-viewer-image {
+          display: table-cell;
+          vertical-align: middle;
+          text-align: center;
+          img {
+               max-width: 100%;
+               max-height: 100%;
+          }
+     }
+     .gallery-viewer-nav {
+          position: absolute;
+          top: 40%;          
+     }
+     .gallery-viewer-next {
+          right: 5px;
+     }
+     .gallery-viewer-prev {
+          left: 5px;
+     }
+     .gallery-viewer-photo-info {
+
+     }
+     .gallery-viewer-right {
+
+     }
+     .gallery-image-loading {
+
+     }
+}
+
+#boojers-page .boojers-nav {
+     button {
+          width: 50%;
+          float: left;
+          background: @red;
+          display: block;
+          padding: 0;
+          border: none;
+          font-size: 24px;
+          line-height: 28px;
+          color: @white;
+          span {
+               display: block;
+               padding: 25px 65px;
+          }
+          &:hover,
+          &.active {
+               .box-shadow(~"inset 0 0 16px 2px rgba(0,0,0,.75)");
+          }
+     }
+}
+.no-boxshadow #boojers-page .boojers-nav {
+     button span {
+          border: 4px solid transparent;
+          padding: 20px 60px;
+     }
+     button:hover span,
+     button.active span {
+          border-color: @grayMedDark;
+     }
+}
+
+
+#boojers-page .boojer-tab {
+     display: none;
      .thumbnails {
           margin-left: -30px;
           li {
@@ -93,71 +222,18 @@ body {
                }
           }
      }
+     &.active {
+          display: block;
+     }
+     .boojer-tag-list {
+          .clearfix();
+          margin: 30px 0;
+          li {
+               height: 52px;
+          }
+     }
 }
 
-#boojers-page {
-     .boojers-nav {
-          button {
-               width: 50%;
-               float: left;
-               background: @red;
-               display: block;
-               padding: 25px 0;
-               border: none;
-               font-size: 24px;
-               line-height: 28px;
-               color: @white;
-               span {
-                    display: block;
-                    padding: 0 65px;
-               }
-               &.active {
-                    .box-shadow(~"inset 0 0 16px 2px rgba(0,0,0,.75)");
-               }
-          }
-     }
-     .boojer-tab {
-          display: none;
-          .thumbnails {
-               margin-left: -30px;
-               li {
-                    width: 172px;
-                    float: left;
-                    margin: 0 0 30px 30px;              
-                    background: @grayMedium;
-                    img {
-                         margin: 1px;
-                    }
-                    > div {
-                         margin: 20px;
-                    }
-                    h3 {
-                         color: @darkRed;
-                         font-size: 18px;
-                         line-height: normal;
-                         margin: 0;
-                    }
-                    p {
-                         font-size: 12px;
-                         margin: 0;
-                         color: @black;
-                         font-style: italic;
-                         line-height: normal;
-                    }
-               }
-          }
-          &.active {
-               display: block;
-          }
-          .boojer-tag-list {
-               .clearfix();
-               margin: 30px 0;
-               li {
-                    height: 52px;
-               }
-          }
-     }
-}
 
 .show-taged {
      display: inline-block;
@@ -167,7 +243,7 @@ body {
      font-size: 14px;
      color: #d5d5d5;
      margin-right: 1px;
-     background: #3c3c3c;
+     background: @grayMedDark;
      margin-top: 6px;
      cursor: pointer;
      &.active {
@@ -178,6 +254,8 @@ body {
           color: #d5d5d5 !important;
      }
 }
+
+
 .bio-tag-list {
      .clearfix();
      li {
@@ -192,7 +270,7 @@ body {
           font-size: 14px;
           color: #d5d5d5;
           margin-right: 1px;
-          background: #3c3c3c;
+          background: @grayMedDark;
      }
 }
 
@@ -245,16 +323,7 @@ body {
      }
 }
 
-#footer-top {
-     background: @grayDarker;
-     padding: 10px 0;
-}
-#footer-bottom {
-     background: #303030;
-     padding: 50px 0 20px 0;
-}
-
-
+// DEFINE OUR TAG COLORS
 span.all-label
 span.back-end-developer-label,
 span.creatives-label,
@@ -265,7 +334,7 @@ span.quality-assurance-label,
 span.sales-label,
 span.marketing-label {
      color: #d5d5d5;
-     background: #3c3c3c;
+     background: @grayMedDark;
 }
 span.bookworm-label {
      background: #f811fa;
@@ -304,6 +373,16 @@ span.outdoorsy-label {
      color: @white;
 }
 span.sports-fan-label {
-     background: #3c3c3c;
+     background: @grayMedDark;
      color: @white;
+}
+
+
+#footer-top {
+     background: @grayDarker;
+     padding: 10px 0;
+}
+#footer-bottom {
+     background: @grayDark;
+     padding: 50px 0 20px 0;
 }
