updates for golive

--- a/less/helpers.less
+++ b/less/helpers.less
@@ -14,3 +14,70 @@
 .relative {
 	position: relative;
 }
+
+[class^="bicon-"],
+[class*=" bicon-"] {
+  display: inline-block;
+  width: 40px;
+  height: 40px;
+  .ie7-restore-right-whitespace();
+  line-height: 40px;
+  vertical-align: text-top;
+  background-image: url("/img/sprites.png");
+  background-position: 0px 0px;
+  background-repeat: no-repeat;
+  margin-top: 1px;
+  text-indent: -400px;
+  overflow: hidden;
+  direction: rtl;
+}
+
+.bicon-facebook {
+	background-position: 0 0;
+}
+.bicon-twitter {
+	background-position: -48px 0;
+}
+.bicon-pinterest {
+	background-position: -96px 0;
+}
+.bicon-google-plus {
+	background-position: -146px 0;
+}
+.bicon-youtube {
+	background-position: -195px 0;
+}
+.bicon-blog {
+	background-position: -242px 0;
+}
+
+.bicon-tumbler-video {
+	width: 22px;
+	height: 25px;
+	line-height: 25px;
+	background-position: -130px -55px;
+}
+.bicon-tumbler-camera {
+	width: 30px;
+	height: 25px;
+	line-height: 25px;
+	background-position: -5px -55px;
+}
+.bicon-tumbler-tweet {
+	width: 30px;
+	height: 25px;
+	line-height: 25px;
+	background-position: -168px -55px;
+}
+.bicon-tumbler-quote {
+	width: 30px;
+	height: 25px;
+	line-height: 25px;
+	background-position: -85px -55px;
+}
+.bicon-tumbler-facebook {
+	width: 12px;
+	height: 25px;
+	line-height: 25px;
+	background-position: -54px -55px;
+}
