--- a/less/variables.less
+++ b/less/variables.less
@@ -13,7 +13,7 @@
 @grayDarker:            #191919;
 @grayMedDark:			#3c3c3c;
 @grayDark:              #303030;
-@grayMedium:			#CCC;
+@grayMedium:			#c8c7c7;
 @gray:                  #6a6a6a;
 @grayLight:             #999;
 @grayLighter:           #eee;
