Added a gallery view page

--- a/less/site.less
+++ b/less/site.less
@@ -108,6 +108,11 @@ body {
                }
           }
      }
+     .full-gallery-thumbnails {
+          li {
+               min-height: auto;
+          }
+     }
 }
 
 #gallery-viewer {
