--- a/less/responsive_adjust.less
+++ b/less/responsive_adjust.less
@@ -28,14 +28,22 @@
 	}
 	#site-header {
 		.navbar {
-			margin: 0;
+			background: #ed1c24;
+			.btn-navbar {
+				float: none;
+				position: absolute;
+				top: 40px;
+				right: 20px;
+				margin: 0;
+				background: @black;
+			}
 			.navbar-inner {
 				margin: 0;
 				padding: 0;
 				min-height: 95px;
 			}
 			.nav {
-				margin-top: 38px;
+				margin-top: 10px;
 			}
 			.nav li {
 				border-top: none;
