--- a/less/site.less
+++ b/less/site.less
@@ -14,6 +14,9 @@ body {
                margin: 0;
                padding: 0;
                min-height: 95px;
+               .border-radius(0);
+               border: none;
+               background: @grayDarker; 
           }
           .nav-collapse {
                background: @grayDarker;  
@@ -33,6 +36,7 @@ body {
                text-transform: lowercase;
                color: @red;
                .rotate(40deg);
+               text-shadow: none;
           }
           .nav > .active > a,
           .nav > li > a:hover,
