--- a/less/style.less
+++ b/less/style.less
@@ -1,5 +1,11 @@
 @import "twitter-bootstrap/bootstrap.less";
-@import "twitter-bootstrap/responsive.less";
+// RESPONSIVE CLASSES
+@import "twitter-bootstrap/responsive-utilities.less";
+@import "twitter-bootstrap/responsive-1200px-min.less";
+@import "twitter-bootstrap/responsive-768px-979px.less";
+@import "twitter-bootstrap/responsive-767px-max.less";
+@import "twitter-bootstrap/responsive-navbar.less";
+// END RESPONSIVE CLASSES
 @import "fancybox.less";
 @import "utilities.less";
 @import "variables.less";
