--- a/less/site.less
+++ b/less/site.less
@@ -96,6 +96,7 @@ body {
      .thumbnails {
           margin-left: -30px;
           li {
+               position: relative;
                width: 272px;
                min-height: 269px;
                margin: 0 0 30px 30px;              
@@ -118,6 +119,16 @@ body {
                     color: @black;
                     font-style: italic;
                     line-height: normal;
+               }
+               a.gallery-slideshow-btn {
+                    position: absolute;
+                    top: 151px;
+                    right: 1px;
+                    text-indent: -500px;
+                    width: 115px; 
+                    height: 40px;
+                    background: url(/img/slideshow-btn.png) no-repeat 0 0 transparent;
+                    overflow: hidden;
                }
           }
      }
