added booj.com link

--- a/less/site.less
+++ b/less/site.less
@@ -44,6 +44,16 @@ body {
                color: @white;
           }
      }
+     .visit-booj-link {
+          font-size: 16px;
+          float: right;
+          display: block;
+          padding: 39px 20px;
+          color: #fff;
+          &:hover {
+               color: #fff;
+          }
+     }
 }
 
 #boojer-home-circle {
