removed background on gallery view.

--- a/less/site.less
+++ b/less/site.less
@@ -145,6 +145,11 @@ body {
      .full-gallery-thumbnails {
           li {
                min-height: auto;
+               background: none;
+               img {
+                    border: 1px solid @grayMedium;
+                    margin: 0;
+               }
           }
      }
 }
